added n x n methods to solve center piece

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Cubenxn",
+            "request": "launch",
+            "mainClass": "Cubenxn"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Cube3x3",
             "request": "launch",
             "mainClass": "Cube3x3"
